--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "magister-labs",
+  "author": "Dmytro Poshtarenko",
+  "license": "MIT",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
